@@ -16,6 +16,16 @@ import { useBluetooth } from "../provider/BluetoothProvider";
 import { ConnectionState } from "../utils/uuids";
 import { buildRoute } from "../routes";
 
+const YTVideo = styled("div")`
+  min-width: 800px;
+  min-height: 500px;
+  padding: 20px;
+  margin: 20px auto;
+  border: 1px solid var(--border-color);
+  border-radius: 16px;
+
+`;
+
 const AudioCard = styled("div")`
   border-radius: 16px;
   border: 1px solid var(--border-color);
@@ -146,6 +156,12 @@ export const VolcanoView: Component = () => {
         <HeatAndPump />
         <HeatingTimeDisplay />
       </MainCard>
+      <YTVideo>
+        <iframe width="800" height="500" src="https://www.youtube.com/embed/2wYtJwDkKIk?si=oNif7cIBLopPzclP?autoplay=1&loop=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>      
+      </YTVideo>
+      <AudioCard>
+       <div style="align: center, min-width: 800px"><audio controls src="/sound.mp3" loop /></div>
+      </AudioCard>
 
       {/* Workflows */} 
       <WorkFlowSection />
@@ -172,9 +188,6 @@ export const VolcanoView: Component = () => {
         <SettingItem>
         </SettingItem>
       </SettingsContainer>
-      <AudioCard>
-       <div style="align: center, min-width: 800px"><audio controls src="/sound.mp3" loop /></div>
-      </AudioCard>
       <ImageBgLine />
      <ImageBgFooter />
     </>
